2004-09-02 Nobuo Yamashita  <nobsun@sampou.org>

	* Release 0.2.8:
	Fixed.
	- Build process cleanuped
	- Avoid some tests to stack with Gauche 0.8.1
	Ad hoc patch
	- Enable to include apostrophies in (S)XML attribute value string.
	
2004-08-12 Nobuo Yamashita  <nobsun@sampou.org>

	* test/shell.scm.in, test/usermode.scm:
	Patched to avoid stacking with Gauche 0.8.1. by making port's 
	buffering mode none on input port bound with proccess output.
	
2004-08-11 Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua/server.scm:
	Newly defined sxml:attr->xml-bis and replaced sxml:attr->xml with it.
	This enabled to include apostrophies in attribute value string.
	
	
2004-06-28  Kimura Fuyuki  <fuyuki@hadaly.org>

	* Makefile.in, src/Makefile.in, cgi/fix-shebang.sh: Yet more
	cleanups; now the whole build-(clean)-edit-rebuild process is
	believed to have been sanitized.

2004-06-26  Kimura Fuyuki  <fuyuki@hadaly.org>

	* examples/Makefile.in, src/Makefile.in, test/Makefile.in: More
	dependencies and clean targets.

2004-06-25  Nobuo Yamashita  <nobsun@sampou.org>

	* plugins/allow-module.scm: added rfc.uri entry.

2004-06-23  Nobuo Yamashita  <nobsun@sampou.org>

	* Release 0.2.7:
	Bugfix release. 
	- Change unixdomain socket permission from o777 to o770.
	- Added --with-cgilogdir option to configure script.
	- Change log file directory for kahua.cgi from /tmp/t.log 
	to $(KAHUA_CGILOG_PATH)/kahua-cgi.log.

2004-06-16  Nobuo Yamashita  <nobsun@sampou.org>

	* src/Makefile.in: fixed a bug inserting 'exec ' repeatedly.

2004-06-09  Nobuo Yamashita  <nobsun@sampou.org>

	* src/Makefile.in: modified permission of $KAHUA_SOCKBASE
	from o777 to o770.

	* cgi/Makefile.in: modified permission of $KAHUA_CGILOGDIR
	from o777 to o770.
	
2004-06-09  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua-keyserv, src/kahua-server, src/kahua-spvr: 
	modified unix-domain socket's permission from o777 to o770

	* configure.ac: added --with-cgilogdir option
